# ENPM818M_simple_ftp

./: CMakeLists.txt  README.md  test_client.sh  test_start_server.sh
inc/: helpers.h  simple_ftp_server.h
src/: simple_ftp_client.c  simple_ftp_server.c
